# DenseFace3D

./: .gitignore  CMakeLists.txt  Dense3DFace.cpp  DenseFace3D.cpp  Dockerfile  HeadPose.cpp  OGL_OCV_common.cpp  OGL_OCV_common.h  README.md  ThinPlateSpline.h  glm.h  linalg3d.h  ludecomposition.h  readcsv.cpp  samplePoint.cpp  samplePoint.h  stdafx.h
em-sfm/: apprRot.m  computeH.c  computeH.m  computeH.mexmaci64  compute_log_lik.m  conn.txt  createfigure.m  em_sfm.m  estep_compute_Z_distr.m  estep_lds_compute_Z_distr.m  findG.m  init_SB.m  init_lds.m  input_and_truth.mat  kalmansmooth.m  landmark.txt  main.m  mstep_lds_update.m  mstep_update_missingdata.m  mstep_update_noisevar.m  mstep_update_rotation.m  mstep_update_shapebasis.m  mstep_update_transl.m  my_triangulation.m  mydemo.m  new_depth.txt  notes.txt  random_nr_motion.m  randomshapes_demo.m  readme.txt  rigidfac.m  shark_demo.m  track.txt  vis_reconstruction.m
